bugfixes in collection scenario rollout, ui updates to align with db changes

--- a/html/admin/css/style.styl
+++ b/html/admin/css/style.styl
@@ -8666,7 +8666,7 @@ div.component-collections-scenario > table.reflex {
 }
 
 .component-collections-scenario > table.reflex > tbody > tr > th {
-	width	: 12em;
+	width	: 20em;
 }
 
 .component-collections-scenario-threshold > ul.reset {
